# browser-use-flight-search

./: .cursorrules  .gitignore  PRD.md  README.md  main.py  makefile  pyproject.toml
src/: constants.py  main_google_flights.py  main_kayak_flights.py  typings.py
src/lib/: google_flights.py  kayak_flights.py  run.py  utils.py
src/tasks/: google_flights_task.py  kayak_flights_task.py
